# entity-risk-engine

./: .gitignore  LICENSE  NOTICE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
arbiter/: __init__.py  pipeline.py
arbiter/consolidate/: consolidate.py
arbiter/core/: __init__.py  contracts.py
arbiter/ingest/: __init__.py  adapters.py
arbiter/models/: __init__.py  detector.py
arbiter/observe/: __init__.py  audit.py  drift.py
arbiter/rank/: __init__.py  ranker.py  sink.py
arbiter/sandbox/: backtest.py
arbiter/score/: __init__.py  judge.py
detection_platform/: __init__.py  pipeline.py
detection_platform/consolidate/: __init__.py
detection_platform/core/: contracts.py
detection_platform/features/: __init__.py  pointintime.py
detection_platform/models/: detector.py
detection_platform/observe/: drift.py
detection_platform/sandbox/: __init__.py
docs/: ARCHITECTURE.md  PRD.md  TEST_STRATEGY.md
examples/: __init__.py
examples/aml/: README.md
examples/insider_risk/: backtest.py  config.json  features.py  run.py
examples/payments_fraud/: __init__.py  config.json  features.py  run.py
examples/payments_fraud/data/: signals.jsonl  transactions.csv
tests/: test_advisory_floor.py  test_consolidate.py  test_drift.py  test_genericity.py  test_leakage_invariant.py  test_models_seam.py  test_sandbox.py
