[project]
name = "detection-platform"
version = "0.1.0"
description = "A generic, configurable, leakage-safe detection platform (clean-room reference)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Andrew Cairns" }]
dependencies = []  # the core platform is stdlib-only by design

[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
