[project]
name = "arbiter-risk-engine"
version = "0.1.0"
description = "Arbiter — Entity Risk Scoring Engine: fuse detector signals into one explainable, prioritized risk score per entity (clean-room reference)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Andrew Cairns" }]
dependencies = []  # the core platform is stdlib-only by design

[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
